--- a/beifong/requirements.txt
+++ b/beifong/requirements.txt
@@ -53,7 +53,7 @@ docstring_parser==0.16
 duckduckgo_search==8.0.1
 elevenlabs==1.57.0
 espeakng-loader==0.2.4
-faiss-cpu==1.10.0
+faiss-cpu==1.9.0.post1
 fastapi==0.115.12
 feedparser==6.0.11
 filelock==3.18.0
