--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "howler": "^2.2.4",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
